Text Cutoff in location overlay fixed

--- a/app/styles/templates/_index.scss
+++ b/app/styles/templates/_index.scss
@@ -51,6 +51,10 @@
   overflow-x: scroll;
 }
 
+.locationlabel{
+  padding-left: 0.3rem !important;
+}
+
 .order_header {
   margin-bottom: 1rem !important;
   padding-top: 0;
